# xclip

./: .gitignore  CMakeLists.txt
